objects/Trustee__c.object
<CustomObject>
    <fields>
        <fullName>Trustee_Address_2__c</fullName>
        <label>Trustee Address 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trustee_Address_3__c</fullName>
        <label>Trustee Address 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trustee_Address_4__c</fullName>
        <label>Trustee Address 4</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trustee_First_Name_2__c</fullName>
        <label>Trustee First Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_First_Name_3__c</fullName>
        <label>Trustee First Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_First_Name_4__c</fullName>
        <label>Trustee First Name 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name_2__c</fullName>
        <label>Trustee Last Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name_3__c</fullName>
        <label>Trustee Last Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name_4__c</fullName>
        <label>Trustee Last Name 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Phone_Number_2__c</fullName>
        <label>Trustee Phone Number 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Phone_Number_3__c</fullName>
        <label>Trustee Phone Number 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Phone_Number_4__c</fullName>
        <label>Trustee Phone Number 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Trustee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Trustee</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Trustee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trustees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>